[gd_scene load_steps=18 format=2]

[ext_resource path="res://grafica/Shopping/ShoppingBg.png" type="Texture" id=1]
[ext_resource path="res://grafica/Shopping/placeLaigth.png" type="Texture" id=2]
[ext_resource path="res://grafica/Shopping/BTN_buy_UP.png" type="Texture" id=3]
[ext_resource path="res://grafica/Shopping/BTN_buy_DOWN.png" type="Texture" id=4]
[ext_resource path="res://grafica/Shopping/BTN_voltar.png" type="Texture" id=5]
[ext_resource path="res://script/Shoping.gd" type="Script" id=6]
[ext_resource path="res://grafica/Shopping/Ativo 52.png" type="Texture" id=7]
[ext_resource path="res://script/utils/DebugTools.gd" type="Script" id=8]
[ext_resource path="res://grafica/Shopping/BTN_voltar_Houver.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
override_oversampling = 3.0
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://font/Corbel Bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 28
font_data = SubResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 302.0 ],
"_edit_vertical_guides_": [ 179.0 ]
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.05
anchor_top = 0.0968801
anchor_right = 0.945833
anchor_bottom = 0.17109
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Custo" type="Label" parent="TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 160.01, 25 )
custom_fonts/font = SubResource( 1 )
text = "Selecionar"
align = 1
valign = 1
clip_text = true

[node name="SeuGanho" type="Label" parent="."]
anchor_left = 0.785
anchor_top = 0.028
anchor_right = 0.953
anchor_bottom = 0.069
margin_left = -1.20007
margin_top = 5.64799
margin_right = 3.31992
margin_bottom = 8.301
custom_fonts/font = SubResource( 4 )
text = "99999"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PowerGun" type="Label" parent="."]
anchor_left = 0.231
anchor_top = 0.822
anchor_right = 0.374
anchor_bottom = 0.854
margin_left = -0.320007
margin_top = -0.160034
margin_right = -0.279999
margin_bottom = -0.119995
custom_fonts/font = SubResource( 6 )
text = "99999"

[node name="LiveMax" type="Label" parent="."]
anchor_left = 0.472
anchor_top = 0.822
anchor_right = 0.615
anchor_bottom = 0.854
margin_left = 0.159973
margin_top = -0.160034
margin_right = 0.199982
margin_bottom = -0.119995
custom_fonts/font = SubResource( 6 )
text = "99999"

[node name="NavSkipp" type="Label" parent="."]
anchor_left = 0.712
anchor_top = 0.822
anchor_right = 0.856
anchor_bottom = 0.854
margin_left = 0.359985
margin_top = -0.160034
margin_right = -0.320068
margin_bottom = -0.119995
custom_fonts/font = SubResource( 6 )
text = "99999"

[node name="GDNaves" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 667 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
texture = ExtResource( 7 )
expand = true

[node name="Draw" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 8 )

[node name="debug" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.999
margin_right = 4.0
margin_bottom = 0.280029
custom_fonts/font = SubResource( 8 )
autowrap = true

[node name="Voltar" type="TextureButton" parent="."]
anchor_top = 0.015
anchor_right = 0.156
anchor_bottom = 0.059
margin_top = -0.200001
margin_right = -0.32
margin_bottom = -0.520004
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 5 )
stretch_mode = 2

[node name="Buy" type="TextureButton" parent="."]
anchor_left = 0.418056
anchor_top = 0.91485
anchor_right = 0.584722
anchor_bottom = 0.96094
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
